// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot default 1`] = `
<button
  class="component primary regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot no emphasis 1`] = `
<button
  class="component primary regular"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size large 1`] = `
<button
  class="component primary large emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size regular 1`] = `
<button
  class="component primary regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size small 1`] = `
<button
  class="component primary small emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size xsmall 1`] = `
<button
  class="component primary xsmall emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant clear 1`] = `
<button
  class="component clear regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant danger 1`] = `
<button
  class="component danger regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant gray 1`] = `
<button
  class="component gray regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant primary 1`] = `
<button
  class="component primary regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant secondary 1`] = `
<button
  class="component secondary regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant secondary-gray 1`] = `
<button
  class="component secondaryGray regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant success 1`] = `
<button
  class="component success regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant warning 1`] = `
<button
  class="component warning regular emphasis"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot width 100% 1`] = `
<button
  class="component primary regular emphasis width100"
  data-test="Button"
  type="button"
/>
`;
